@@ -16,6 +16,11 @@ tree (maybe).
 
 Version 1.3.12 (In Progress)
 ============================
+05/22/2002: beazley
+            New library files: cpointer.i, carrays.i, cmalloc.i.  These
+            provide access to C pointers and memory allocation functions.
+            See Doc/Manual/Library.html for details.
+
 05/22/2002: cheetah (William Fulton)
             [Java] C type char no longer maps to Java type byte, but to Java type char.
             It is now treated as a character rather than a signed number. This fits in
